# Simple-Chatroom

./: .gitignore  BUILD.bazel  ChatRoom.h  ChatRoomMain.cpp  Client.h  ClientMain.cpp  README.md  WORKSPACE  tasks.txt
Protobuf/: ChatRoom.grpc.pb.cc  ChatRoom.grpc.pb.h  ChatRoom.pb.cc  ChatRoom.pb.h  ChatRoom.proto
Unit_Tests/: Test_ChatRoom.cpp
