cc_library(
    name = "message_framework",
    hdrs = glob(["Protobuf/*.pb.h"]),
    srcs = glob(["Protobuf/*.pb.cc"]),
    deps = ["@com_google_protobuf//:protobuf",
            "@com_github_grpc_grpc//:grpc++"],
)

cc_binary(
    name = "client",
    srcs = ["Client.h", "ClientMain.cpp"],
    deps = [":message_framework"],
)

cc_binary(
    name = "chat_room",
    srcs = ["ChatRoom.h", "ChatRoomMain.cpp"],
    deps = [":message_framework"],
)

cc_test(
    name = "test_chat_room",
    srcs = glob(["Unit_Tests/*.cpp"]),
    deps = ["@com_google_googletest//:gtest_main",
            ":chat_room"]
)
