cc_library(
    name = "message_framework",
    hdrs = glob(["Protobuf/*.pb.h"]),
    srcs = glob(["Protobuf/*.pb.cc"]),
    deps = ["@com_google_protobuf//:protobuf",
            "@com_github_grpc_grpc//:grpc++"],
)

cc_library(
    name = "client_server",
    hdrs = ["ChatRoom.h", "Client.h"],
    deps = [":message_framework"]
)

cc_binary(
    name = "client",
    srcs = ["Client.h", "ClientMain.cpp"],
    deps = [":client_server"],
)

cc_binary(
    name = "chat_room",
    srcs = ["ChatRoomMain.cpp"],
    deps = [":client_server"],
)

cc_test(
    name = "test_chat_room",
    srcs = glob(["Unit_Tests/*.cpp"]),
    deps = ["@com_google_googletest//:gtest_main",
            ":client_server"]
)
